Tests/Conformance/Generated/Builtin/Constant/Bls12_381/G2/Bad_syntax_02.lean
-- Auto-generated by gen_conformance_tests.py — do not edit manually.
import Tests.Conformance.ConformanceUtils
import PlutusCore.UPLC.ScriptEncoding.Basic

namespace Tests.Conformance.Generated.Builtin.Constant.Bls12_381.G2.Bad_syntax_02

open Tests.Conformance

/-- error: Parsing error -/
#guard_msgs in
#conformance_import_uplc builtin_constant_bls12_381_G2_bad_syntax_02 "../.plutus-conformance/plutus-conformance/test-cases/uplc/evaluation/builtin/constant/bls12-381/G2/bad-syntax-02/bad-syntax-02.uplc"

end Tests.Conformance.Generated.Builtin.Constant.Bls12_381.G2.Bad_syntax_02
